--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,3 +1,7 @@
 {
-  "build": { "dockerfile": "Dockerfile" }
+  "name": "main-dev-image",
+  "image": "mcr.microsoft.com/vscode/devcontainers/base:1-jammy",
+  "features": {
+    "ghcr.io/dhoeric/features/google-cloud-cli:1": {}
+  }
 }
