--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -25,8 +25,7 @@ jobs:
         with:
           scan-type: "fs"
           ignore-unfixed: true
-          format: "template"
-          template: "@/contrib/sarif.tpl"
+          format: "sarif"
           output: "trivy-results.sarif"
           exit-code: 1
 
